# fasthep-cli

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pixi.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: alpha-ci.yml  cd.yml  ci.yml
src/fasthep_cli/: __init__.py  _curator.py  _download.py  _plotter.py  _software.py  app.py  logo.py  main.py  testing.py
src/fasthep_cli/commands/: __init__.py  compile.py  diff.py  init.py  make_plan.py  normalise.py  render.py  run.py  run_plan.py  show_defaults.py
tests/: __init__.py  helpers.py  test_cli.py  test_package.py
