[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fasthep-cli"
dynamic = ["version"]
description = "Thin FAST-HEP command line entry point."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "FAST-HEP contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "fasthep-flow",
    "rich",
    "typer",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
fasthep = "fasthep_cli.app:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/fasthep_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fasthep_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fasthep_cli",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "B",
    "I",
    "ARG",
    "C4",
    "EM",
    "ICN",
    "ISC",
    "G",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "YTT",
]
ignore = [
    "E501",
    "PLR",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "ARG"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
